# currency-app

./: .dockerignore  .gitignore  Dockerfile  JenkinsREADME.md  Jenkinsfile  README.md  docker-compose.yml  k8s-appREADME.md  k8sREADME.md  main.py  pyproject.toml  requirements.txt  routes.py  settings.py
.devcontainer/: devcontainer.json
ansible/: README.md  inventory.yml  playbook.yml
ansible/roles/crio/: README.md
ansible/roles/crio/defaults/: main.yml
ansible/roles/crio/meta/: main.yml
ansible/roles/crio/tasks/: install_crio.yml  main.yml
ansible/roles/kubernetes/: README.md
ansible/roles/kubernetes/defaults/: main.yml
ansible/roles/kubernetes/tasks/: install_kuber_utils.yml  main.yml
ansible/roles/kubernetes/templates/: apt-preferences-kubernetes.j2
entity/: models.py
k8s-app/: k3s.yml
service/: cbrf.py  currency_codes.json
