[tool.poetry]
name = "currency-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Antropov",email = "m4ksek@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
requires-python = ">=3.12"
dependencies = [
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
